# myday3

./: .gitattributes  .gitignore  LICENSE  README.md  db.sqlite3  manage.py  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html
assets/css/: tailwind.css
assets/js/components/buttons/: DarkModeSwitch.js
assets/js/components/footer/: Footer.js
assets/js/components/journalbox/: EmotionClassifier.js  EmotionData.js  InputArea.js  JournalInputBox.js  TopRowSvgButton.js
assets/js/components/login/: LoginPrompt.js
assets/js/components/navbar/: NavBar.js
assets/js/components/saveindicator/: CircleIndicator.js  SaveIndicator.js
assets/js/pages/: home.js  login.js
assets/js/util/: getCookie.js  useAutosizeTextArea.js
journal/: context_processors.py  models.py  urls.py  views.py
journal/emotion-classification/: config.json  rng_state.pth  scheduler.pt  tokenizer.json  trainer_state.json
journal/migrations/: 0001_initial.py
journal/templates/journal/: index.html
myj/: settings.py  urls.py  wsgi.py
static/css/: tailwind.css  tailwind.min.css  tailwindoutput.css
static/js/bundles/: home-bundle.js
templates/: base.html  home.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
