[tool.poetry]
name = "myday3"
version = "0.0.0"
description = ""
authors = ["Bhavik Soni"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2"
python-dotenv = "^0.17.0"
email-validator = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
